--- a/DoAn_ShopOnline/DoAn_ShopOnline/Views/Shared/_LoaiSanPham.cshtml
+++ b/DoAn_ShopOnline/DoAn_ShopOnline/Views/Shared/_LoaiSanPham.cshtml
@@ -1,4 +1,5 @@
 ﻿@model IEnumerable<ShopOnlineConnection.LoaiSanPham>
+@*/*day la phan Hien lam*/*@
 <li class="dropdown">
     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Product Type</a>
     <div class="dropdown-menu" ">
