--- a/DoAn_ShopOnline/DoAn_ShopOnline/Views/Shared/_MainLayout.cshtml
+++ b/DoAn_ShopOnline/DoAn_ShopOnline/Views/Shared/_MainLayout.cshtml
@@ -73,6 +73,7 @@
        
 
     <!--Navigation-->
+    @*/*day la phan Hien lam*/*@
     <nav id="menu" class="navbar">
         <div class="container">
             <div class="navbar-header">
@@ -99,7 +100,7 @@
                 }
             </div>*@
 
-
+            @*/Het phan Hien lam*/*@
 
         </div>
     </nav>
