--- a/DoAn_ShopOnline/DoAn_ShopOnline/Views/Shared/_NhaSanXuat.cshtml
+++ b/DoAn_ShopOnline/DoAn_ShopOnline/Views/Shared/_NhaSanXuat.cshtml
@@ -1,4 +1,7 @@
-﻿@model IEnumerable<ShopOnlineConnection.NhaSanXuat>
+﻿
+@model IEnumerable<ShopOnlineConnection.NhaSanXuat>
+
+    @*/*day la phan Hien lam*/*@
 <li class="dropdown">
     <a href="#" class="dropdown-toggle" data-toggle="dropdown">M.Product</a> @*M.Product là nhà sản xuất*@
     <div class="dropdown-menu">
