--- a/DoAn_ShopOnline/DoAn_ShopOnline/Views/Shared/_Top4New.cshtml
+++ b/DoAn_ShopOnline/DoAn_ShopOnline/Views/Shared/_Top4New.cshtml
@@ -1,4 +1,5 @@
 ﻿@model IEnumerable<ShopOnlineConnection.SanPham>
+@*/*day la phan Hien lam*/*@
 <div class="row">
     <div class="col-lg-12">
         <div class="heading"><h2>SẢN PHẨM MỚI</h2></div>
